--- a/draft/styles.css
+++ b/draft/styles.css
@@ -61,7 +61,7 @@ a.button, button.button {
     font-family: "nta", Arial, sans-serif;
     font-size: 13px;
     margin: 0;
-    padding: 5px 15px;
+    padding: 7px 15px 5px 15px;
     border-radius: 3px;
     border: none;
     margin: 3px;
