--- a/draft/styles.css
+++ b/draft/styles.css
@@ -1,6 +1,7 @@
 :root {
     --black: #0b0c0c;
     --blue: rgb(0, 94, 165);
+    --grey: rgb(243, 243, 243);
 }
 
 body {
@@ -11,11 +12,32 @@ body {
     margin: 0;
     background-color: white;
     color: var(--black);
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 a {
     color: inherit;
     text-decoration: none;
+}
+
+.panels {
+    display: flex;
+}
+
+@media only screen and (max-width: 700px) {
+    .panels {
+        flex-direction: column;
+    }
+  }
+
+
+.sep {
+    height: 1px;
+    background-color: var(--black);
+    margin: 10px 5px;
+    opacity: 0.5;
 }
 
 #presentation {
@@ -24,11 +46,11 @@ a {
     text-transform: uppercase;
     padding: 8px 10px 5px 10px;
     margin: 0;
+    text-align: center;
 }
 
 nav {
-    background-color: var(--black);
-    color: white;
+    background-color: rgb(243, 243, 243);
     padding: 5px 15px;
 }
 
@@ -57,9 +79,9 @@ header {
 }
 
 footer {
-    background-color: var(--black);
-    color: white;
+    background-color: var(--grey);
     padding: 10px;
+    opacity: 0.8;
 }
 
 #logo {
@@ -79,7 +101,11 @@ h2 {
 
 h3 {
     font-size: 1.1rem;
-     text-transform: uppercase;
+    text-transform: uppercase;
+ }
+
+ h4 {
+    text-transform: uppercase;
  }
 
 
@@ -96,7 +122,7 @@ input {
     -webkit-appearance: none;
 }
 
-a.button, button.button {
+.button {
     text-transform: uppercase;
     font-family: "nta", Arial, sans-serif;
     font-size: 13px;
@@ -109,7 +135,9 @@ a.button, button.button {
     background-color: var(--blue);
     text-decoration: none;
     display: inline-block;
+    cursor: pointer;
 }
+
 
 .explainer {
     font-style: italic;
@@ -123,15 +151,23 @@ a.button, button.button {
     font-weight: bold;
 }
 
-.option {
-    margin: 10px;
-    padding: 10px;
-    border: 1px solid  rgba(228, 228, 228, 0.6);
-    border-radius: 3px;
+.choices {
+    display: flex;
+    flex-direction: column;
 }
 
-.option:hover {
-    background-color: rgba(255, 255, 255, 0.15);
+
+.button.selected {
+    background-color: green;
+}
+
+.button.selected:hover {
+    cursor: not-allowed;
+}
+
+.button:hover {
+    background-color: green;
+    opacity: 0.8;
 }
 
 .chosen-by {
@@ -139,17 +175,14 @@ a.button, button.button {
     font-size: 0.70rem;
     font-weight: 100;
     text-transform: uppercase;
-    color: var(--blue);
+    opacity: 0.8;
 }
 
 #total-choices {
-    color: white;
     margin-top: 20px;
     text-align: center;
     font-weight: 700;
     font-size: 1.3rem;
-    padding: 10px;
-    background-color:  #29a197;
 }
 
 table#list-of-persons {
@@ -164,22 +197,18 @@ table#list-of-persons td {
 
 table#list-of-persons td {
     font-size: 0.9rem;
-    font-weight: 100;
+}
+
+table#list-of-persons td.button {
+    font-size: 0.8rem;
+    padding: 3px 7px 3px 7px;
+    margin: 2px;
 }
 
 .bold {
     font-weight: 700;
 }
 
-#add-person {
-    color: white;
-    padding: 10px;
-    font-size: 0.9rem;
-    background-color:  #29a197;
-    margin: 10px;
-    font-weight: 100;
-    border-radius: 3px;
-}
 
 #donation-options {
     display: flex;
@@ -194,4 +223,9 @@ table#list-of-persons td {
 #donation-options div {
     font-size: 0.9rem;
     margin: 3px;
+}
+
+.security-questions {
+    display: flex;
+    flex-direction: column;
 }
