--- a/draft/styles.css
+++ b/draft/styles.css
@@ -26,6 +26,10 @@ a {
     display: flex;
 }
 
+.panel {
+    flex: 1;
+}
+
 @media only screen and (max-width: 700px) {
     .panels {
         flex-direction: column;
