Made the navs block capitals, it could be said we're guilty of overusing the block capitals, but for menu items it is generally a good thing.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -82,6 +82,10 @@ nav ul {
     justify-content: space-between;
 }
 
+nav ul li{
+    text-transform: uppercase;
+    font-size: 0.8em;
+}
 nav ul li.active {
     text-decoration: underline;
 }
