--- a/static/css/main.css
+++ b/static/css/main.css
@@ -136,6 +136,10 @@ button:hover,
     transform: scale(1.01);
 }
 
+th {
+    font-weight: 400;
+}
+
 /* Utilities */
 
 .sep {
@@ -170,7 +174,7 @@ button:hover,
     background-color: var(--color-primary4);
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     color: var(--color-text-inverted);
     padding: 10px;
 }
@@ -256,9 +260,17 @@ section>h2:first-child {
 /* Bottom Matter */
 
 footer {
-    background-color: var(--color-primary4);
+    color: var(--color-text-inverted);
+    background-image: linear-gradient(to right, rgba(1, 18, 51, 0.85) 0%, rgba(1, 18, 51, 1) 25%, rgba(19, 60, 85, 1) 75%, rgba(19, 60, 85, 0.85) 100%);
+    background-repeat: no-repeat,
+        no-repeat,
+        no-repeat;
+    background-position: left,
+        right,
+        left;
     padding: 10px;
     margin-bottom: var(--sms-builder-height);
+    font-weight: 100;
 }
 
 footer #footer-title {
@@ -268,6 +280,7 @@ footer #footer-title {
 nav {
     font-weight: 400;
     font-size: 0.9rem;
+    margin: 10px 0px;
 }
 
 nav ul {
@@ -460,19 +473,22 @@ ul.top-ten-representatives li:last-child {}
 
 
 table#list-of-persons {
-    margin-bottom: 10px;
+    margin: 10px 0px;
     border-collapse: collapse;
+    width: 100%;
 }
+
 
 table#list-of-persons th,
 table#list-of-persons td {
     text-align: left;
     box-sizing: border-box;
-    padding: 3px;
+    padding: 3px 10px 3px 3px;
+
 }
 
 table#list-of-persons td.representative-name {
-    width: calc(100% - 1em);
+    /* width: calc(100% - 1em); */
 }
 
 table#list-of-persons thead {
@@ -502,9 +518,9 @@ table#list-of-persons td {
 }
 
 table#list-of-persons td.button {
-    font-size: 0.7rem;
-    padding: 3px 7px 3px 7px;
-    margin: 2px;
+    font-size: 0.8rem;
+    padding: 5px 8px;
+    margin: 3px;
     width: 35vw;
 }
 
@@ -512,6 +528,7 @@ table#list-of-persons td.button {
     display: flex;
     justify-content: space-around;
     flex-direction: row;
+    padding: 0 20vw;
 }
 
 /* Hack to get all the button text and counter text to line up */
@@ -533,9 +550,8 @@ table#list-of-persons td.button {
 .representatives-totals-row {
     font-weight: 400px;
     border-top: 1px solid var(--color-primary4);
-    border-bottom: 1px solid var(--color-primary4);
     padding: 5px 0px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .representatives-totals-value {
@@ -545,12 +561,32 @@ table#list-of-persons td.button {
 
 #add-person {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 #add-person button {
     background-color: transparent;
+    border: 1px solid var(--color-primary);
     color: var(--color-primary);
+}
+
+.add-person-search-results ul {
+    list-style: none;
+    font-weight: 400;
+    margin: 0;
+    padding: 0;
+    color: var(--color-primary);
+}
+
+.add-person-search-results ul li {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.add-person-search-results .add-person-search-result-description {
+    font-weight: 100;
 }
 
 
@@ -565,6 +601,7 @@ table#list-of-persons td.button {
     align-items: center;
     justify-content: space-around;
     flex-wrap: wrap;
+    padding: 0 5vw;
 }
 
 .charity-choice {
@@ -579,13 +616,24 @@ table#list-of-persons td.button {
     text-transform: lowercase;
 }
 
+.charity-choice-label,
+.how-much-donate {
+    display: block;
+    margin: 20px 0px;
+    font-weight: 400;
+}
 
+.donation-permission {
+    font-size: 1.2rem;
+    font-weight: 700;
+}
 
 table.charity-choice-table button {
-    font-size: 0.7rem;
-    padding: 3px 7px 3px 7px;
-    margin: 2px;
+    font-size: 0.8rem;
+    padding: 5px 8px;
+    margin: 3px;
     width: 35vw;
+    text-align: left;
 }
 
 /* SMS Builder */
@@ -596,7 +644,7 @@ table.charity-choice-table button {
     justify-content: center;
     align-items: center;
     width: 100vw;
-    background-color: var(--color-primary);
+    background-color: var(--color-primary3);
     position: fixed;
     bottom: 0;
     display: flex;
